Fixed an issue where the page header text was covered by the nav when it expands on tablet

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -105,6 +105,17 @@
     flex-direction: column;
   }
 }
+@media only screen and (max-width: 1024px) {
+  .container-tablet{
+    position: relative;
+  }
+  .text-tablet{
+    top: 50px;
+  }
+  .breadcrumb-tablet{
+    top: 60px;
+  }
+}
 
 .testimonial-text {
   margin: 0;
@@ -153,6 +164,3 @@
 .countdown-message {
   margin-bottom: 1rem;
 }
-
-/* Board page */
-
